Remove manifestName ocurrences and improve caching Add more logging
